tests/NormalTests/paczka1/fuzzy1/38261854.err
Error in line 3: kPgC A540 12,7
Error in line 5: ytmfQop6T A216 7,4
Error in line 6: kPgC A216 67,2
Error in line 14: kPgC A898 2,6
Error in line 21: A216 A898 82,7
Error in line 29: A216 A320 31,3
Error in line 37: BM0FX5Tq6 A216 83,1
